--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="reveal" id="exampleModal1" data-reveal>
       <div class="grid-container">
         <h1>Hero Name</h1>
-        <img id="modalHeroImage" src=Assets/header.png alt="hero image">
+        <img id="modalHeroImage" src=Images/header.png alt="hero image">
         <p>Textarinoooooooooooooooooooo</p>
         <p>Hero information</p>
         <p>More hero information</p>
@@ -37,9 +37,9 @@
         <br><br><br><br><br><br><br><br>
       </div>
       <div class="grid-x grid-margin-x small-up-2 medium-up-3"></div>
-          <img class="modalPics" src=Assets/header.png alt="hero image">
-          <img class="modalPics" src=Assets/header.png alt="hero image">
-          <img class="modalPics" src=Assets/header.png alt="hero image">
+          <img class="modalPics" src=Images/header.png alt="hero image">
+          <img class="modalPics" src=Images/header.png alt="hero image">
+          <img class="modalPics" src=Images/header.png alt="hero image">
     </div>
     </div>
       <!-- <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
@@ -304,6 +304,6 @@
     <script>
       $(document).foundation();
     </script>
-    <script src="C:\Users\Vince\OneDrive\Columbia Bootcamp\GitHub\marvel-crossover\script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
