--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="reveal" id="exampleModal1" data-reveal>
       <div class="grid-container">
         <h1>Hero Name</h1>
-        <img id="modalHeroImage" src=Assets/header.png alt="hero image">
+        <img id="modalHeroImage" src=Images/header.png alt="hero image">
         <p>Textarinoooooooooooooooooooo</p>
         <p>Hero information</p>
         <p>More hero information</p>
@@ -48,7 +48,7 @@
       </button>
     </div> -->
     <div class="nav-container">
-      <img id= "headerImage" src="Assets/header.png" alt="Header image titled: Marvel Overlaps" />
+      <img id= "headerImage" src="Images/header.png" alt="Header image titled: Marvel Overlaps" />
         <div class="nav-right">
           <!--Search Bar-->
           <form class="searchBar" autocomplete="on">
@@ -118,36 +118,36 @@
       <!-- Phase One -->
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-ironman-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-ironman-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Iron Man!</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-hulk-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-hulk-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">The Incredible Hulk!</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-ironman2-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-ironman2-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Iron Man 2! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-thor-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-thor-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Thor!  </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-captain-america-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-captain-america-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Captain America: The First Avenger </figcaption>
           </figure>
         </li><li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-marvel avengers-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-marvel avengers-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Marvel's The Avengers!  </figcaption>
           </figure>
         </li>
@@ -155,37 +155,37 @@
         <!-- Phase Two -->
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-ironman3-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-ironman3-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Iron Man 3!</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-thor-dark-world-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-thor-dark-world-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Thor: The Dark World!</figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-captain-america-winter-solider-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-captain-america-winter-solider-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Captain America: The Winter Soldier! </figcaption>
           </figure>
         </li>
         </li><li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-guardians-of the galaxy1-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-guardians-of the galaxy1-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Guardians of the Galaxy! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-avengers-age-of-ultron-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-avengers-age-of-ultron-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Avengers: Age of Ultron! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-antman1-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-antman1-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Ant-Man! </figcaption>
           </figure>
         </li>
@@ -193,64 +193,64 @@
         <!-- Phase Three-->
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-captain-america-civil-war-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-captain-america-civil-war-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Captain America: Civil War! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-doctor-strange-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-doctor-strange-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Doctor Strange! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-guardians-of the galaxy2-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-guardians-of the galaxy2-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Guardians of the Galaxy Vol. 2!  </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-spderman-homecoming-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-spderman-homecoming-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Spider-Man: Homecoming! </figcaption>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-thor-ragnarok-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-thor-ragnarok-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Thor: Ragnarok! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-black-panther-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-black-panther-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Black Panther! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-marvel avengers-infinity-war.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-marvel avengers-infinity-war.jpg" alt="Space">
             <figcaption class="orbit-caption">Avengers: Infinity War!  </figcaption>
           </figure>
         </li><li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-antman-&-wasp-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-antman-&-wasp-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Ant-Man and the Wasp! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-captian-marvel-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-captian-marvel-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Captain Marvel! </figcaption>
           </figure>
         </li>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-marvel avengers-endgame.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-marvel avengers-endgame.jpg" alt="Space">
             <figcaption class="orbit-caption">Marvel Avengers Endgame!  </figcaption>
           </figure>
         <li class="orbit-slide">
           <figure class="orbit-figure">
-            <img class="orbit-image" src="Assets/mcu-spderman-far-from-home-poster.jpg" alt="Space">
+            <img class="orbit-image" src="Images/mcu-spderman-far-from-home-poster.jpg" alt="Space">
             <figcaption class="orbit-caption">Spider-Man: Far From Home!  </figcaption>
           </figure>
       </ul>
